# alb

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
docs/stdout/: README.md  arithmetic.alb  arithmetic_sout.alb  hello_world.alb  hello_world_sout.alb
docs/variables/: hello_world_variables.alb
include/: alb-program.hpp  alb-statement.hpp
src/: main.cpp
src/include/: AlbToken.hpp  CompilerDirectiveChecks.cpp  CompilerDirectiveChecks.hpp  Lexer.hpp  StringStore.hpp  Token.hpp  Tokenizer.hpp  alb-program.hpp  alb-statement.hpp
src/include/tokens/: BasicToken.hpp
tests/: CMakeLists.txt
tests/resources/include/Lexer/: test_string_raw_parsing.alb  test_string_raw_parsing.alb.stringContents
tests/src/include/: Lexer.cpp  StringStore.cpp  Tokenizer.cpp  alb-program.cpp
